--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
-        tools:context=".MainActivity"
+        tools:context=".Board"
         android:background="@color/bg_green">
 
     <TextView
@@ -22,8 +22,12 @@
             android:textAlignment="center"/>
 
     <Spinner
+            android:background="#ffffff"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></Spinner>
+            android:layout_height="wrap_content"
+            android:prompt="@string/prompt_board"
+            android:entries="@array/arr_board">
+    </Spinner>
 
     <TextView
             android:text="공지사항"
