adapter에 각 item click시 second activity로 이동 by intent (WebView)

--- a/app/src/main/res/drawable/bg_txt2.xml
+++ b/app/src/main/res/drawable/bg_txt2.xml
@@ -5,8 +5,8 @@
     />
 
     <!--<solid-->
-            <!--android:color="#61B2DFDB"/>-->
+    <!--android:color="#61B2DFDB"/>-->
 
-    <stroke android:width="6dp" android:color="@color/orange"/>
+    <stroke android:width="6dp" android:color="@color/sky_blue"/>
 
 </shape>
