--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -43,19 +43,44 @@
     </LinearLayout>
 
 
-    <TextView
-            android:id="@+id/txt_recyclerView1"
-            android:text="공지사항"
-            android:paddingVertical="10dp"
-            android:paddingHorizontal="30dp"
-            android:layout_marginVertical="10dp"
-            android:textSize="18sp"
-            android:textColor="@color/txt_green"
-            android:textStyle="bold"
-            android:background="@drawable/bg_txt1"
-            android:layout_width="wrap_content"
+    <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"/>
+            android:orientation="horizontal"
+            android:gravity="center">
+
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+        <TextView
+                android:id="@+id/txt_recyclerView1"
+                android:text="@string/txt_board1"
+
+                android:paddingVertical="10dp"
+                android:paddingHorizontal="30dp"
+                android:layout_marginVertical="10dp"
+                android:textSize="20sp"
+                android:textColor="@color/txt_green"
+                android:fontFamily="@font/baemin_hanna"
+                android:background="@drawable/bg_txt1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"/>
+
+        <TextView
+                android:id="@+id/txt_more1"
+                android:text="@string/txt_more"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:textColor="@color/txt_green"
+                android:fontFamily="@font/baemin_hanna_air"
+                android:textAlignment="center"/>
+
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
@@ -66,19 +91,46 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <TextView
-            android:id="@+id/txt_recyclerView2"
-            android:text="@string/txt_board1"
-            android:paddingVertical="10dp"
-            android:paddingHorizontal="30dp"
-            android:layout_marginVertical="10dp"
-            android:textSize="18sp"
-            android:textColor="@color/txt_green"
-            android:textStyle="bold"
-            android:background="@drawable/bg_txt2"
-            android:layout_width="wrap_content"
+    <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"/>
+            android:orientation="horizontal"
+            android:gravity="center">
+
+
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+        <TextView
+                android:id="@+id/txt_recyclerView2"
+                android:text="@string/txt_board2"
+                android:paddingVertical="10dp"
+                android:paddingHorizontal="30dp"
+                android:layout_marginVertical="10dp"
+                android:textSize="20sp"
+                android:textColor="@color/txt_green"
+                android:fontFamily="@font/baemin_hanna"
+                android:background="@drawable/bg_txt2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"/>
+
+
+        <TextView
+                android:id="@+id/txt_more2"
+                android:text="@string/txt_more"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:textColor="@color/txt_green"
+                android:fontFamily="@font/baemin_hanna_air"
+                android:textAlignment="center"/>
+
+    </LinearLayout>
+
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview2"
