--- a/app/src/main/res/layout/activity_board_detail.xml
+++ b/app/src/main/res/layout/activity_board_detail.xml
@@ -13,6 +13,7 @@
 
     <Button
             android:id="@+id/btn_board_back"
+            android:visibility="gone"
             android:text="돌아가기"
             android:background="@drawable/bg_btn1"
             android:textSize="18sp"
@@ -20,14 +21,13 @@
             android:textStyle="bold"
             android:paddingVertical="10dp"
             android:paddingHorizontal="30dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginVertical="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     <WebView
             android:id="@+id/webView_board"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp">
+            android:layout_height="match_parent">
 
     </WebView>
 
