--- a/app/src/main/res/layout/layout_board.xml
+++ b/app/src/main/res/layout/layout_board.xml
@@ -6,7 +6,7 @@
         android:orientation="horizontal"
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="5dp"
-        android:background="#ffffff"
+        android:background="#F2FFFFFF"
         android:gravity="center">
 
     <TextView
