--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="crimpson">#8d1d1d</color>
     <color name="ash_purple">#a65ba6</color>
     <color name="sky_blue">#279bdc</color>
+    <color name="white">#ffffff</color>
 </resources>
